updated appsettings to exclude connection string value

--- a/Hubtel.Wallets.Api/appsettings.json
+++ b/Hubtel.Wallets.Api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "Default": ""
   },
+  "Jwt": {
+    "key": "Q1W2E3R4T5Y6U7I8O9P0ASDFGHJKLZXCVBNM",
+    "Issuer": "HubtelAuthProxy",
+    "Audience": "HubtelClient",
+    "DurationInMinutes": 20
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
