--- a/Hubtel.Wallets.Api/appsettings.json
+++ b/Hubtel.Wallets.Api/appsettings.json
@@ -3,10 +3,13 @@
     "Default": ""
   },
   "Jwt": {
-    "key": "Q1W2E3R4T5Y6U7I8O9P0ASDFGHJKLZXCVBNM",
-    "Issuer": "HubtelAuthProxy",
-    "Audience": "HubtelClient",
+    "key": "",
+    "Issuer": "",
+    "Audience": "",
     "DurationInMinutes": 20
+  },
+  "PurposeString": {
+    "AccountNumberPurposeString": ""
   },
   "Logging": {
     "LogLevel": {
